fixed skill rating alignment on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ hr {
     background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
   }
 
+  .skill-rating {
+    margin-top: 32px !important;
+  }
+
 }
 
 .hide-text {
